@@ -25,7 +25,6 @@
  * Inline Functions as globals for users using the public interface
  *
  */
-#define TS_INLINE
-#define INLINE_CC
 
+#define TS_INLINE
 #include "P_Cluster.h"
