@@ -83,7 +83,7 @@ public:
    @param buf if !NULL, then len bytes copied from buf and made into packet.
    @param len # of bytes to copy from buf
  */
-TS_INLINE UDPPacket *new_UDPPacket(struct sockaddr const* to, ink_hrtime when = 0, char *buf = NULL, int len = 0);
+extern UDPPacket *new_UDPPacket(struct sockaddr const* to, ink_hrtime when = 0, char *buf = NULL, int len = 0);
 /**
    Create a new packet to be sent over UDPConnection. This clones and
    makes a reference to an existing IOBufferBlock chain.
@@ -95,19 +95,19 @@ TS_INLINE UDPPacket *new_UDPPacket(struct sockaddr const* to, ink_hrtime when = 
    for packet
    @param len # of bytes to reference from block
  */
-TS_INLINE UDPPacket *new_UDPPacket(struct sockaddr const* to,
+extern UDPPacket *new_UDPPacket(struct sockaddr const* to,
                                     ink_hrtime when = 0, IOBufferBlock * block = NULL, int len = 0);
 /**
    Create a new packet to be sent over UDPConnection.  Packet has no
    destination or data.
 */
-TS_INLINE UDPPacket *new_UDPPacket();
+extern UDPPacket *new_UDPPacket();
 
 /**
    Create a new packet to be delivered to application.
    Internal function only
 */
-TS_INLINE UDPPacket *new_incoming_UDPPacket(struct sockaddr* from, char *buf, int len);
+extern UDPPacket *new_incoming_UDPPacket(struct sockaddr* from, char *buf, int len);
 
 //@}
 #endif //__I_UDPPACKET_H_
