@@ -63,4 +63,8 @@
 #endif
 #endif
 
+#if !defined(TS_INLINE)
+#define TS_INLINE inline
+#endif
+
 #endif
