@@ -2,6 +2,8 @@
   Changes with Apache Traffic Server 3.3.2
 
 
+  *) [TS-1772] Remove multiple TS_INLINE defines
+
   *) [TS-1771] add http_load to the build
 
   *) [TS-1766] integrate AIO test into the autotools test suite
